--- a/app/src/main/res/layout/activity_template_dialog.xml
+++ b/app/src/main/res/layout/activity_template_dialog.xml
@@ -22,7 +22,6 @@
     />
 
     <TextView
-        android:id="@+id/textView_template_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
@@ -39,11 +38,10 @@
         app:layout_constraintEnd_toEndOf="@id/sequence_phrase"
         />
 
-    <Button
-        android:id="@+id/button_template_next"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableTop="@drawable/phases_next_button"
+        android:src="@drawable/phases_next_button"
         app:layout_constraintTop_toBottomOf="@id/sequence_phrase"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
