--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,16 +9,17 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/circle_design"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/blue_ellipse"
+            android:src="@drawable/profile_blue_ellipse"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/avatar"
@@ -26,9 +27,11 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_avatar"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/edit_username"
             android:layout_marginTop="70dp"
-            />
+            android:contentDescription="@string/profile_TXTavatar" />
 
         <LinearLayout
             android:id="@+id/edit_username"
@@ -36,33 +39,38 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintTop_toBottomOf="@+id/avatar"
-            app:layout_constraintRight_toRightOf="parent"
-            android:gravity="center">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            >
 
             <EditText
                 android:id="@+id/editText_profile_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Username"
-                android:text="NULL"
+                android:hint="@string/profile_hint_username"
                 android:textColorHint="@color/gray_500"
+                android:text="ASDWASDW"
                 android:gravity="center"
                 android:fontFamily="@font/montserrat"
                 android:background="@android:color/transparent"
                 android:textColor="@color/white"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="20dp"
-                android:maxLength="20"/>
+                android:maxLength="20"
+                android:layout_marginStart="25dp"
+                android:inputType="text" />
 
             <View
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:background="@drawable/ic_edit"
+                android:background="@drawable/profile_ic_edit"
                 android:layout_gravity="center"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="5dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/editText_profile_username"
+                android:layout_marginStart="12dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -72,46 +80,41 @@
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/circle_design"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/user_data"
             android:gravity="start"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email:"
+                android:text="@string/profile_TXTemail"
                 android:textColor="@color/base_blue"
                 android:fontFamily="@font/montserrat"
+                android:textAlignment="center"
                 android:layout_marginBottom="15dp"
-                android:textSize="10pt"
+                android:textSize="20sp"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name:"
+                android:text="@string/profile_TXTname"
                 android:textColor="@color/base_blue"
                 android:fontFamily="@font/montserrat"
+                android:textAlignment="center"
                 android:layout_marginBottom="15dp"
-                android:textSize="10pt"
+                android:textSize="20sp"
                 />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Last Name:"
+                android:text="Birth date:"
                 android:textColor="@color/base_blue"
+                android:textAlignment="center"
                 android:fontFamily="@font/montserrat"
-                android:layout_marginBottom="15dp"
-                android:textSize="10pt"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Birthday:"
-                android:textColor="@color/base_blue"
-                android:fontFamily="@font/montserrat"
-                android:layout_marginBottom="15dp"
-                android:textSize="10pt"
+                android:textSize="20sp"
                 />
 
         </LinearLayout>
@@ -135,7 +138,7 @@
                 android:background="@android:color/transparent"
                 android:text="design@gmail.com"
                 android:textColor="@color/white"
-                android:textSize="10pt"
+                android:textSize="20sp"
                 android:inputType="textEmailAddress"
                 android:layout_marginBottom="15dp"
                 />
@@ -153,60 +156,28 @@
                     android:fontFamily="@font/montserrat"
                     android:background="@android:color/transparent"
                     android:text="design"
-                    android:hint="Name"
+                    android:hint="@string/profile_hint_name"
                     android:textColor="@color/white"
-                    android:textSize="10pt"
+                    android:textSize="20sp"
                     android:maxLength="20"
                     />
 
                 <View
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:background="@drawable/ic_edit"
+                    android:background="@drawable/profile_ic_edit"
                     android:layout_gravity="center"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginLeft="5dp"/>
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"/>
 
             </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="15dp">
-
-                <EditText
-                    android:id="@+id/editText_profile_lastname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/montserrat"
-                    android:background="@android:color/transparent"
-                    android:text="design"
-                    android:hint="Last"
-                    android:maxLength="20"
-                    android:textColor="@color/white"
-                    android:textSize="10pt"
-                    />
-
-                <View
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:background="@drawable/ic_edit"
-                    android:layout_gravity="center"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginLeft="5dp"/>
-
-            </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginBottom="15dp">
+                android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/editText_profile_birthday"
@@ -215,20 +186,22 @@
                     android:fontFamily="@font/montserrat"
                     android:background="@android:color/transparent"
                     android:text="03/08/2004"
-                    android:hint="Birthday"
+                    android:hint="@string/profile_hint_birthdate"
                     android:maxLength="10"
                     android:textColor="@color/white"
-                    android:textSize="10pt"
+                    android:textSize="20sp"
                     android:inputType="datetime"
                     />
                 <View
                     android:layout_width="15dp"
                     android:layout_height="15dp"
-                    android:background="@drawable/ic_edit"
+                    android:background="@drawable/profile_ic_edit"
                     android:layout_gravity="center"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginLeft="5dp"/>
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    />
             </LinearLayout>
 
         </LinearLayout>
@@ -246,10 +219,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Progress"
+                android:text="@string/profile_total_progress"
                 android:textColor="@color/white"
                 android:fontFamily="@font/montserrat"
-                android:layout_gravity="center"/>
+                android:textSize="20sp"
+                android:textAlignment="center"/>
 
             <TextView
                 android:id="@+id/textView_profile_progress_bar"
@@ -257,7 +231,7 @@
                 android:layout_height="wrap_content"
                 android:text="25%"
                 android:textSize="15pt"
-                android:gravity="center"
+                android:textAlignment="center"
                 android:textColor="@color/white"/>
 
         </LinearLayout>
