--- a/app/src/main/res/layout/activity_template_dialog.xml
+++ b/app/src/main/res/layout/activity_template_dialog.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background_main">
 
@@ -22,6 +23,7 @@
     />
 
     <TextView
+        android:id="@+id/textView_template_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
@@ -39,6 +41,7 @@
         />
 
     <ImageView
+        android:id="@+id/button_template_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/phases_next_button"
