--- a/app/src/main/res/drawable/phases_create_shape_rectangle.xml
+++ b/app/src/main/res/drawable/phases_create_shape_rectangle.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="74">
   <path
       android:pathData="M0,0h81v74h-81z"
-      android:fillColor="#06091A"/>
+      android:fillColor="#FFEB3B"/>
 </vector>
