Update final project levels (FINAl VERSION)

--- a/app/src/main/res/layout/activity_phases_create_colors.xml
+++ b/app/src/main/res/layout/activity_phases_create_colors.xml
@@ -6,7 +6,20 @@
     android:background="@color/background_main">
 
     <include layout="@layout/back_arrow"/>
-
+    <TextView
+        android:id="@+id/txt_phrase_colors"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="random stuff"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:height="35sp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
 
 
@@ -24,15 +37,6 @@
 
     </FrameLayout>
 
-    <ImageView
-        android:id="@+id/arrow_next_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/phases_next_arrow"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
