--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="300dp"
-        android:text="Create account"
+        android:text="Criar conta"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:fontFamily="@font/montserrat_bold"
@@ -101,7 +101,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:text="Create"
+        android:text="CRIAR"
         app:fontFamily="@font/montserrat"
         android:textColor="@color/white"
         android:background="@drawable/login_custom_button"
